# flocking

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: record_demo.py
src/flocking/: __init__.py  birds.py  main.py
