[project]
name = "flocking"
version = "0.1.0"
description = "A flock of little birds"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
flocking = "flocking.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flocking"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["claude_agent_sdk", "claude_agent_sdk.*"]
ignore_missing_imports = true
