[project]
name = "flocking"
version = "0.1.0"
description = "A flocking birds simulation"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
flocking = "flocking.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flocking"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["pygame", "pygame.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
